console/src/components/Common/TableCommon/ReactTableOverrides.css
.ReactTable {
  border: 0;
}

.ReactTable .rt-tbody {
  min-height: 40px;
}

.ReactTable .rt-noData {
  padding: 5px;
  top: 62px;
  background: none;
}

.ReactTable .-pagination .-btn {
  height: 35px !important;
  width: 40%;
  display: inline-block;
  font-weight: bold;
}

.ReactTable .rt-thead {
  font-size: 16px;
  color: #333;
  background-color: #ddd;
  cursor: pointer;
  text-align: left;
}

.ReactTable .rt-thead .rt-resizable-header-content {
  font-weight: bold;
}

.ReactTable .rt-thead .rt-resizable-header .rt-resizer {
  width: 10px;
  right: -5px;
}

.ReactTable .rt-expander {
  width: 10px;
}

.ReactTable .rt-thead.-header {
  box-shadow: none;
}

.ReactTable .-pagination {
  box-shadow: none;
  border: none;
}

.ReactTable .rt-table .rt-thead .rt-th,
.ReactTable .rt-table .rt-thead .rt-td {
  padding-left: 20px !important;
  padding-right: 20px !important;
  border-right: 1px solid rgba(0,0,0,0.1);
}

.ReactTable .rt-table .rt-thead .rt-th.collapsed,
.ReactTable .rt-table .rt-thead .rt-td.collapsed {
  padding-left: 10px !important;
  padding-right: 10px !important;
}

.ReactTable .rt-tbody .rt-th,
.ReactTable .rt-tbody .rt-td {
  padding: 8px;
  border-right: 1px solid rgba(0,0,0,0.1);
  word-wrap: break-word;
}

.ReactTable .rt-th .ellipsis,
.ReactTable .rt-td > div {
  overflow: hidden;
  text-overflow: ellipsis;
}

.ReactTable .rt-table .rt-thead .rt-tr .rt-th {
  background-color: #f2f2f2 !important;
  color: #4d4d4d;
  font-weight: 600 !important;
  border-bottom: 2px solid #ddd;
  text-align: left;
}

.ReactTable .rt-table .rt-thead .rt-tr .rt-th:first-child {
  flex: 24 0 auto !important;
  min-width: 150px;
}

.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd .rt-td:first-child {
  flex: 24 0 auto !important;
  min-width: 150px;
}

.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even .rt-td:first-child {
  flex: 24 0 auto !important;
  min-width: 150px;
}

.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-odd:hover {
  background-color: #ebf7de;
}

.ReactTable .rt-table .rt-tbody {
  margin-bottom: 10px;
  border: solid 1px rgba(0, 0, 0, 0.05);
  min-width: fit-content !important;
  min-width: -moz-fit-content !important;
  min-width: -webkit-fit-content !important;
  min-width: -o-fit-content !important;
}
.ReactTable .rt-table .rt-thead {
  min-width: fit-content !important;
  min-width: -moz-fit-content !important;
  min-width: -webkit-fit-content !important;
  min-width: -o-fit-content !important;
  border-right: solid 1px #f2f2f2;
  border-left: solid 1px #f2f2f2;
}
.ReactTable .rt-tbody .rt-tr-group:last-child {
  border-bottom: solid 1px rgba(0, 0, 0, 0.05);
}

.ReactTable .rt-table .rt-tbody .rt-tr-group .rt-tr.-even:hover {
  background-color: #ebf7de;
}

.ReactTable .rt-table .rt-tbody {
  overflow-x: hidden !important;
  min-width: fit-content !important;
}

.ReactTable .rt-thead [role='columnheader'] {
  outline: 0;
}

